<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FinanceManager</string>
    <string name="tab_one_title">Bookings</string>
    <string name="tab_two_title">Monthly Overview</string>
    <string name="tab_three_title">Report</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="choose_account">Edit your accounts</string>
    <string name="left_slider_desktop">Desktop</string>
    <string name="left_slider_categories">Categories</string>
    <string name="left_slider_template">Templates</string>
    <string name="left_slider_no_category">No Category</string>
    <string name="left_slider_course">Course</string>
    <string name="left_slider_standing_order">Standing Orders</string>
    <string name="left_slider_planned_bookings">Planned Bookings</string>
    <string name="left_slider_transfers">Transfers</string>
    <string name="left_slider_backup">Backup</string>
    <string name="left_slider_import_export">Import, Export</string>
    <string name="left_slider_store">Store</string>
    <string name="left_slider_preferences">Preferences</string>
    <string name="left_slider_follow_us">Follow Us</string>
    <string name="left_slider_rate_the_app">Rate our App</string>
    <string name="left_slider_about">About</string>
    <string name="expense_screen_category">Choose category</string>
    <string name="expense_screen_type_income">Income</string>
    <string name="expense_screen_type_expense">Expense</string>
    <string name="expense_screen_title">Input title</string>
    <string name="expense_screen_tag">Tag</string>
    <string name="expense_screen_notice">Input notice</string>
    <string name="expense_screen_date">date_placeholder</string>
    <string name="expense_screen_account">account_placeholder</string>
    <string name="placeholder_amount">0.00</string>
    <string name="expense_screen_amount_currency">$</string>
    <string name="expense_screen_template">Create a new template</string>
    <string name="expense_screen_recurring">Recurring</string>
    <string name="expense_screen_recurring_frequency">Choose frequency</string>
    <string name="expense_screen_recurring_end">Choose last occurrence</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="expense_pop_up_title">title_placeholder</string>
    <string name="expense_screen_dsp_tag">Add Tag</string>
    <string name="expense_screen_dsp_category">Choose Category</string>
    <string name="expense_screen_dsp_title">Input Title</string>
    <string name="expense_screen_dsp_notice">Input Notice</string>
    <string name="input_account">Choose Account</string>
    <string name="expense_screen_error_create">Error while creating the expense. Create at least a Title, Amount and a Category!</string>
    <string name="month_report_booking">Booking</string>
    <string name="month_report_bookings">Bookings</string>
    <string name="btn_new_acc">New Account</string>
    <string name="no_name">(Unnamed)</string>
    <string name="category_name">Enter a category name</string>
    <string name="choose_category_color">Choose a color</string>
    <string name="account">Accounts</string>
    <string name="create_booking">Create Booking</string>
    <string name="no_data">No Data Available</string>
    <string name="others">Other</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="update">Update</string>
    <string name="add_child_to_booking">Create Child Booking</string>
    <string name="choose_currency">Select the accounts mCurrency</string>
    <string name="create_new_account_name">Accountname</string>
    <string name="create_new_account_starting_balance">Start balance</string>
    <string name="create_new_account_create">Create Account</string>
    <string name="import_title">Import</string>
    <string name="export_title">Export</string>
    <string name="error">Error</string>
    <string name="file_already_existing_err_msg">Filename is already existing!</string>
    <string name="overwrite_existing_file">Create File anyway</string>
    <string name="abort_file_writing">Do Not Create File</string>
    <string name="choose_new_file_name">Choose new File name</string>
    <string name="input_file_name">Input file name</string>
    <string name="btn_create">Create</string>
    <string name="choose_directory">Choose Directory</string>
    <string name="restoreBackup">Restore Backup</string>
    <string name="restore_backup_confirmation">Are you sure you want to restore the old Backup? All Changes since then will be lost!</string>
    <string name="choose_new_backup_name">Backup name</string>
    <string name="creating_backup">Creating Backup</string>
    <string name="created_backup">Successfully created Backup</string>
    <string name="btn_set">set</string>
    <string name="select_end_date">Until</string>
    <string name="input_date">Input Date</string>
    <string name="error_same_accounts">You cannot transfer from and to the same account!</string>
    <string name="error_missing_content">You have to set all values</string>
    <string name="btn_save">Save</string>
    <string name="input_title">Input Title</string>
    <string name="hint_tag_input">Input Tag</string>
    <string name="input_notice">Input Notice</string>
    <string name="transfer">Transfer</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="make_main">Make main account</string>
    <string name="failed_to_delete_account">Failed to delete account, there are still Bookings with this account!</string>
    <string name="deleted_account">Deleted account</string>
    <string name="changed_main_account">is now the main account.</string>
    <string name="choose_category">Choose category</string>
    <string name="input_price">Input price</string>
    <string name="input_frequency">Input frequency</string>
    <string name="most_bookings_in">Most Bookings in Category</string>
    <string name="no_expenses">No Expenses</string>
    <string name="no_bookings_in_month">No bookings this month</string>
    <string name="category">Category</string>
    <string name="show_templates">Templates</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="no_account">First create an account before you start creating bookings</string>
    <string name="hint_input_category_name">Enter category name</string>
    <string name="hint_choose_color">Choose a color</string>
    <string name="error_category_name_missing">Please enter at least a name to create a category</string>
    <string name="error_create_expense_content_missing">Please fill out all fields to create a Booking</string>
    <string name="not_implemented">Oops! Looks like you found something you shouldn\'t see</string>
    <string name="category_transfer">Transfer</string>
    <string name="set_account_title">Set Account Title</string>
    <string name="set_Account_balance">Set account balance</string>
    <string name="transfer_from">Transfer from</string>
    <string name="transfer_to">Transfer to</string>
    <string name="error_parent_already_highlighted">Children of an already selected Parent cannot be selected!</string>
    <string name="confirmation_dialog_title">Confirm Selection</string>
    <string name="import_bookings_confirmation">Are you sure that you want to import this bookings?</string>
    <string name="export_directory_confirmation">Are you sure that you want to Export the bookings to the current directory?</string>
    <string name="create_export">Create Export</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="error_no_directory_selected">You have to select a directory before continuing!</string>
    <string name="hint_choose_directory">Click here to Select a Directory</string>
    <string name="no_files_to_import">There are no files to import in this directory!</string>
    <string name="create_new_directory">Create Directory</string>
    <string name="directory_already_existing">Error! Directory already exists!</string>
    <string name="revert_action">Undo</string>
    <string name="revert_deletion">Undo deletion?</string>
    <string name="bookings_successfully_restored">Bookings have been successfully restored!</string>
    <string name="create_category">Create Category</string>
    <string name="choose_category_parent">Choose the parent Category</string>
    <string name="new_parent_category_name">Title of the new Parent Category</string>
    <string name="choose_parent_category">Choose parent category</string>
    <string name="error_name_missing">Please enter a name</string>
    <string name="empty_list">No Items found</string>
    <string name="could_not_create_backup">Backup could not be created</string>
    <string name="no_assignment">Not assigned</string>
    <string name="account_not_found">Could not find account</string>
    <string name="no_default_currency">Please choose a default currency first</string>
    <string name="cannot_update_account">Cannot update Account, Account not found!</string>
    <string name="category_not_found">Cannot update category. Category not found</string>
    <string name="add_child_to_child_error">Error! You cannot adda child to a child booking.</string>
    <string name="btn_choose">Choose</string>
    <string name="select_currency">Choose a currency</string>
    <string name="choose_weekday">Select a Weekday</string>
    <string name="choose_backup_amount">Choose the amount of concurrent Backups</string>
    <string name="choose_time">Choose a time</string>
    <string name="attention">Attention</string>
    <string name="reset_settings_alert_message">Your are about to reset all changes to default value! Are you sure you want to continue?</string>
    <string name="create_new">New</string>
    <string name="first_day_of_week">First day of the week</string>
    <string name="automatic_backups">Automatically create Backups?</string>
    <string name="concurrent_backup_count">Max backup count</string>
    <string name="main_currency">Select your main currency</string>
    <string name="reminder_status">Remind me to create Bookings</string>
    <string name="reminder_time">Set reminder time</string>
    <string name="btn_reset">Restore default settings</string>
    <string name="contact">Contact</string>
    <string name="support">Support</string>
    <string name="help_improve">Help improving the app</string>
    <string name="suggest_feature">Suggest new feature</string>
    <string name="app_version">App Version</string>
    <string name="licenses">Licenses</string>
    <string name="from">From</string>
    <string name="till">Till</string>
    <string name="input_frequency_label">Frequency in days: </string>
</resources>