<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
        <group android:checkableBehavior="single">
            <item
                android:index="@+index/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="Desktop" />
            <item
                android:index="@+index/nav_gallery"
                android:icon="@drawable/ic_menu_gallery"
                android:title="Kategorien" />
            <item
                android:index="@+index/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="Schablonen" />
            <item
                android:index="@+index/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="Tools" />
        </group>

        <item android:title="Communicate">
            <menu>
                <item
                    android:index="@+index/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Share" />
                <item
                    android:index="@+index/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="Send" />
            </menu>
        </item>
    -->
    <item
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/left_slider_no_category" />
    <item
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/left_slider_course" />
    <item
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/left_slider_standing_order" />
    <item
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/left_slider_transfers" />
    <group>
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_desktop" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_categories" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_template" />
    </group>

    <group>
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_backup" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_import_export" />
    </group>

    <group>
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_store" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_preferences" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_follow_us" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_rate_the_app" />
        <item
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/left_slider_about" />
    </group>
    <group>
        <item></item>
        <item></item>
        <item></item>
    </group>
    <item
        android:icon="@drawable/ic_menu_camera"
        android:title="@string/left_slider_planned_bookings" />

</menu>
