<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round"/>

        <Button
            android:id="@+id/new_category_name"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_name"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_round"/>

        <Button
            android:id="@+id/new_category_color"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/choose_category_color"
            android:textAlignment="textEnd"
            android:layout_gravity="end"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/new_category_expense_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <RadioButton
            android:id="@+id/new_category_expense"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/expense_screen_type_expense"/>

        <RadioButton
            android:id="@+id/new_category_income"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/expense_screen_type_income"/>

    </RadioGroup>

    <Button
        android:id="@+id/new_category_create"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="bottom|end"
        android:layout_weight="1"
        android:text="@string/btn_ok"/>

</LinearLayout>