<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textAlignment="center"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/edit_recurring_booking_from_date"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Datum"
                android:textColor="@color/primary_text_color"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Bis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/till"
                android:textAlignment="center"
                android:textColor="@color/primary_text_color"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/edit_recurring_booking_end_date"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Datum"
                android:textColor="@color/primary_text_color"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:text="@string/input_frequency_label"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry"/>

        <Button
            android:id="@+id/edit_recurring_booking_frequency"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Häufigkeit"
            android:textColor="@color/primary_text_color"/>

    </LinearLayout>

    <Button
        android:id="@+id/edit_recurring_booking_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_save"
        android:textColor="@color/primary_text_color"/>
</LinearLayout>